--- a/styles.css
+++ b/styles.css
@@ -459,467 +459,44 @@ img {
 
 @media (max-width: 393px) {
   /* Centrarea titlului și ajustarea dimensiunii fontului */
-  
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
-
-:root {
-  --header-height: 3rem;
-  --font-semi: 600;
-  --hue-color: 26;
-  --first-color: hsl(var(--hue-color), 100%, 50%);
-  --second-color: hsl(var(--hue-color), 56%, 12%);
-  --body-font: "Poppins", sans-serif;
-  --big-font-size: 3rem;
-  --h2-font-size: 1.25rem;
-  --normal-font-size: .938rem;
-  --smaller-font-size: .75rem;
-  --mb-2: 1rem;
-  --mb-4: 2rem;
-  --mb-5: 2.5rem;
-  --mb-6: 3rem;
-  --z-back: -10;
-  --z-fixed: 100;
-}
-
-*, ::before, ::after {
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  margin: var(--header-height) 0 0 0;
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  color: var(--second-color);
-}
-
-h1, h2, p {
-  margin: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
-
-.section-title {
-  position: relative;
-  font-size: var(--h2-font-size);
-  color: var(--first-color);
-  margin-top: var(--mb-2);
-  margin-bottom: var(--mb-4);
-  text-align: center;
-}
-.section {
-  padding-top: 3rem;
-  padding-bottom: 2rem;
-}
-
-/*Layout*/
-.bd-grid {
-  max-width: 1024px;
-  display: grid;
-  margin-left: var(--mb-2);
-  margin-right: var(--mb-2);
-}
-
-.l-header {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: var(--z-fixed);
-  background-color: #fff;
-  box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
-}
-
-/*Navigation*/
-.nav {
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-weight: var(--font-semi);
-}
-.nav__item {
-  margin-bottom: var(--mb-4);
-}
-.nav__link {
-  position: relative;
-  color: #fff;
-}
-.nav__link:hover {
-  position: relative;
-}
-.nav__link:hover::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 0.18rem;
-  left: 0;
-  top: 2rem;
-  background-color: var(--first-color);
-}
-.nav__toggle {
-  color: var(--second-color);
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-
-/*Active menu*/
-.active-link::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 0.18rem;
-  left: 0;
-  top: 2rem;
-  background-color: var(--first-color);
-}
-
-/*Home*/
-.home {
-  position: relative;
-  row-gap: 5rem;
-  padding: 4rem 0 5rem;
-}
-.home__data {
-  align-self: center;
-}
-.home__title {
-  font-size: var(--big-font-size);
-  margin-bottom: var(--mb-5);
-}
-.home__title-color {
-  color: var(--first-color);
-}
-.home__social {
-  display: flex;
-  flex-direction: row;
-}
-.home__social-icon {
-  width: max-content;
-  margin-bottom: var(--mb-6);
-  font-size: 2rem;
-  color: var(--second-color);
-}
-.home__social-icon:hover {
-  color: var(--first-color);
-}
-.home__img {
-    position: absolute;
-    right: 0;
-    width: 400px;
-    bottom: 10%;
-  }
-.home__img img {
-  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
-}
-
-.home__img img:hover {
-  transform: scale(1.20); 
-  box-shadow: 0 8px 16px rgba(0,0,0,0.2); 
-}
-
-
-/*Skills*/
-.skills__container {
-  row-gap: 2rem;
-  text-align: center;
-}
-
-.skills__text {
-  margin-bottom: var(--mb-4);
-}
-.skills__data {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  font-weight: var(--font-semi);
-  padding: 0.5rem 1rem;
-  margin-bottom: var(--mb-4);
-  border-radius: 0.5rem;
-  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-}
-.skills__icon {
-  font-size: 2rem;
-  margin-right: var(--mb-2);
-  color: var(--first-color);
-}
-.skills__names {
-  display: flex;
-  align-items: center;
-}
-.skills__bar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: var(--first-color);
-  height: 0.25rem;
-  border-radius: 0.5rem;
-  z-index: var(--z-back);
-}
-.skills__html {
-  width: 95%;
-}
-.skills__css {
-  width: 95%;
-}
-.skills__js {
-  width: 90%;
-}
-.skills__react {
-  width: 80%;
-}
-.skills__img {
-  border-radius: 0.5rem;
-}
-
-/*Portfolio*/
-.work__container {
-  row-gap: 2rem;
-}
-.work__img {
-  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
-.work__img img {
-  transition: 1s;
-}
-.work__img img:hover {
-  transform: scale(1.1);
-}
-
-/*About*/
-.about__container {
-  row-gap: 2rem;
-  text-align: center;
-}
-.about__img img {
-  width: 200px;
-  border-radius: 0.5rem;
-}
-
-/* Footer*/
-.footer {
-  background-color: var(--second-color);
-  color: #fff;
-  text-align: center;
-  font-weight: var(--font-semi);
-  padding: 2rem 0;
-}
-.footer__icon {
-  font-size: 1.5rem;
-  color: #fff;
-  margin: 0 var(--mb-2);
-}
-
-/* Dimensiuni*/
-  body {
-    margin: 0;
-  }
-  .section {
-    padding-top: 4rem;
-    padding-bottom: 3rem;
-  }
-  .section-title {
-    margin-bottom: var(--mb-6);
-  }
-  .section-title::after {
-    width: 80px;
-    top: 3rem;
-  }
   .nav {
-    height: calc(var(--header-height) + 1.5rem);
+    padding: 0 5px; /* Reduce și mai mult padding-ul lateral */
   }
-  .nav__list {
-    display: flex;
-    padding-top: 0;
-  }
+
   .nav__item {
-    margin-left: var(--mb-6);
-    margin-bottom: 0;
+    padding: 0 3px; /* Reduce padding-ul pe fiecare element de navigație */
   }
-  .nav__toggle {
-    display: none;
-  }
+
   .nav__link {
-    color: var(--second-color);
-  }
-  .home {
-    padding: 8rem 0 2rem;
+    font-size: 0.7rem; /* Micsorează și mai mult dimensiunea fontului pentru link-uri */
   }
 
-  .about__container {
-    padding-top: 2rem;
+  .nav__toggle {
+    font-size: 1rem; /* Redimensionează butonul de toggle */
+    right: 5px; /* Poziționează mai aproape de marginea dreaptă */
   }
-  .about__img img {
-    width: 300px;
+
+  /* Reducerea înălțimii header-ului pentru a economisi spațiu vertical */
+  .l-header, .nav {
+    height: 2rem; /* Reduc înălțimea header-ului */
   }
-  .skills__container {
+
+  /* Centrarea și ajustarea spațiilor */
+  .nav, .nav__list {
     align-items: center;
-    text-align: initial;
-  }
-  .work__container {
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 2rem;
+    justify-content: space-between; /* Asigură o distribuție echitabilă a spațiului între elemente */
   }
 
-  .bd-grid {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .home {
-    padding: 10rem 0 2rem;
+  .nav__item {
+    flex-grow: 1; /* Permite fiecărui element să crească pentru a umple spațiul disponibil */
+    text-align: center; /* Centrează textul pentru coerență */
   }
 
-/*Contact*/
-  .contact__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.contact__data {
-    margin: 10px 0;
-    display: flex;
-    align-items: center;
-}
-
-.contact__icon {
-    font-size: 20px;
-    margin-right: 10px;
-    color: var(--second-color); 
-}
-
-.contact__text {
-    font-size: 16px;
-    color: #333; 
-}
-.contact__input {
-  width: 100%;
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-semi);
-  padding: 1rem;
-  border-radius: 0.5rem;
-  border: 1.5px solid var(--second-color);
-  outline: none;
-  margin-bottom: var(--mb-4);
-}
-
-/*PopUp*/
-.popup {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2000; 
-  overflow-y: auto; 
-}
-
-.popup-inner {
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  width: 75%;
-  max-width: 900px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative; 
-  text-align: center;  
-}
-.popup-img {
-  width: 100%;
-  max-height: 60vh;
-  object-fit: contain;
-}
-
-.popup-close-button {
-  background-color: var(--first-color);
-  color: #fff;
-  border: none;
-  transition: 0.3s;
-  border-radius: 0.5rem;
-  outline: none;
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-semi);
-  position: relative;
-  margin-top: 10px;
-  margin-left: 820px;
-  cursor: pointer;
-  z-index: 1050; 
-}
-
-/* Todo */
-.ToDoButton {
-  display: block;
-  border: none;
-  outline: none;
-  font-size: var(--normal-font-size);
-  cursor: pointer;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2rem;
-  background-color: var(--first-color);
-  color: #fff;
-  padding: 0.75rem 2.5rem;
-  font-weight: var(--font-semi);
-  border-radius: 0.5rem;
-  transition: 0.3s;
-}
-.ToDoButton:hover {
-  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
-}
-
-/* Stiluri pentru titlu */
-.heading-todo h1 {
-  text-align: center; 
-  color: #333; 
-}
-
-/* Stiluri pentru formă și butoane */
-.form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.form input, .form button {
-  width: 100%; 
-  padding: 10px;
-  margin-top: 10px; 
-}
-
-
-
-@media (max-width: 393px) {
-  /* Centrarea titlului și ajustarea dimensiunii fontului */
+  /* Ajustări suplimentare pentru a asigura vizibilitatea tuturor elementelor */
+  .nav__link, .nav__toggle {
+    padding: 0; /* Elimină orice padding pentru a maximiza spațiul disponibil */
+  }
+  
   .home__title {
     font-size: 1.5rem;
     text-align: center;
@@ -934,94 +511,6 @@ img {
     position: static;
   }
 
-  /* Centrarea elementelor de navigație */
-  .nav, .nav__list {
-    width: 100%;
-    justify-content: center;
-    text-align: center;
-  }
-
-  .nav__item {
-    flex-grow: 1;
-    text-align: center;
-  }
-
-  /* Ajustarea containerului de lucrări pentru a se afișa pe o singură coloană și centrarea conținutului */
-  .work__container {
-    grid-template-columns: 1fr;
-    padding: 0 20px;
-    text-align: center;
-  }
-
-  /* Centrarea și ajustarea elementelor de competențe */
-  .skills__data {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .skills__icon {
-    margin-bottom: var(--mb-2);
-    display: block;
-    margin: 0 auto; /* Centrarea iconiței */
-  }
-
-  /* Centrarea conținutului din fereastra popup */
-  .popup-inner {
-    width: 95%;
-    margin: 0 auto; /* Centrare orizontală și verticală */
-    padding: 15px;
-  }
-
-  /* Centrarea containerelor de contact */
-  .contact__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  /* Ajustările pentru footer */
-  .footer {
-    text-align: center; /* Asigură că tot textul din footer este centrat */
-  }
-
-  /* Stiluri specifice pentru butoane și formular */
-  .form, .ToDoButton, .form input, .form button {
-    width: 100%;
-    margin: 10px auto; /* Centrare pe axa orizontală */
-    text-align: center;
-  }
-
-  .ToDoButton {
-    display: block;
-    margin: 2rem auto; /* Centrare și spațiere */
-  }
-}
-  .home__title {
-    font-size: 1.5rem;
-    text-align: center;
-  }
-
-  /* Ajustarea și centrarea imaginii */
-  .home__img {
-    height: 400px;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-    position: static;
-  }
-
-  /* Centrarea elementelor de navigație */
-  .nav, .nav__list {
-    width: 100%;
-    justify-content: center;
-    text-align: center;
-  }
-
-  .nav__item {
-    flex-grow: 1;
-    text-align: center;
-  }
 
   /* Ajustarea containerului de lucrări pentru a se afișa pe o singură coloană și centrarea conținutului */
   .work__container {
