--- a/styles.css
+++ b/styles.css
@@ -505,15 +505,15 @@ img {
 
   .nav__toggle {
     font-size: 0.9rem;
-    padding: 0 5px; /* Ajustăm padding-ul pentru a nu ocupa prea mult spațiu */
+    padding: 0 0; /* Ajustăm padding-ul pentru a nu ocupa prea mult spațiu */
     position: absolute;
-    right: 5px; /* Asigurăm că toggle-ul este plasat corespunzător la marginea dreaptă */
+    right: 20px; /* Asigurăm că toggle-ul este plasat corespunzător la marginea dreaptă */
     top: 50%;
     transform: translateY(-50%);
   }
 
   .l-header {
-    height: 0.5rem; /* Continuăm să menținem header-ul compact */
+    height: 2rem; /* Continuăm să menținem header-ul compact */
   }
   
   .home__title {
